--- a/indeX.html
+++ b/indeX.html
@@ -97,37 +97,67 @@ Gefunden auf https://www.w3schools.com/howto/howto_js_sticky_header.asp
     </div>
   </div>
 
-<div class="Wer_nutzt_Fresa">
-  <h2 class="Kapitelüberschrift">Wer nutzt Fresa?</h2>
-</div>
-  <script type='text/javascript' src="jquery.js"></script>
-</body>
 
-
-<div class="Persona">
-  <h2 class="Kapitelüberschrift">Das ist Tine.</h2>
-  <p>Tine ist in Nordhessen aufgewachsen und möchte gern frische Lebensmittel in ihr Leben integrieren, da sie sich von Grund auf gesund ernährt. Sie ist daran interessiert eine ausgewogene Work-Life-Balance zu haben.
-    Ihr Mann und sie sind Foodies und kochen leidenschaftlich gerne. Sie verfolgen die neusten Trends für die Küche. Beide sind berufstätig und haben sehr wenig Zeit einzukaufen. Sie sind beide äußerst technikaffin und täglich im Internet.
-    Tine legt großen Wert auf die ganzjährige Verfügbarkeit ihr Lieblingsprodukte Paprika und Zucchini.
-     An einem typischen Wochentag ist Tine von morgens gegen 07:30 Uhr bis abends gegen 18 Uhr arbeiten. In der Mittagspause hat sie am liebsten etwas selbstgemachtes dabei, was sie sich dann in der Firmenküche aufwärmt und in Gesellschaft ihrer liebsten Arbeitskollegen genießt.
-     Leider lässt ihr langer Tag jedoch nicht immer Zeit dafür übrig, Lebensmittel einzukaufen, die noch dazu frisch sind. Denn nach der Arbeit erwartet Tine nicht immer schon der Feierabend sondern oft auch weitere Termine und Verpflichtungen, wie Arztbesuche, Haushalt und familiäre Angelegenheiten.
-
-     Tine vermisst einen Service, welcher ihr dabei hilft beim Einkaufen frischer Lebensmittel mehr auf Regionalität zu achten, ihr Zeit spart und der abwechslungsreich ist.
+  <h2 class="Kapitelüberschrift Verbraucher">Wer nutzt Fresa?</h2>
+  <div class="Wer_nutzt_Fresa"
+  <p>Um den möglichen Nutzer besser kennen zu lernen, wurden Befragungen und ausführliche Interviews geführt. Ziel dieser Befragungen war es, Meinungen und Erfahrungen zum Thema Lieferdienste für Lebensmittel und regionale Lebensmittel selber zu sammeln.
+    Diese Feldrecherche wurde an den verschiedensten Orten gehalten, wie dem Wochenmarkt in Darmstadt, Offenbach und Frankfurt. Zu dem wurden Erfahrungen aus Amsterdam mit in die Recherche einbezogen, da die Niederlande sehr viel weiter ist, was neue interessante Services angeht.
   </p>
 </div>
-  <script type='text/javascript' src="jquery.js"></script>
+<div class="Verbraucher_image">
+</div>
+<div class="Wer_nutzt_Fresa2">
+  <p> In den Niederlanden wird schon seit mehreren Jahren von den großen Supermarkt-
+</p>
+</div>
+<div class="Wer_nutzt_Fresa3">
+  <p>ketten wie „Albert Heijn” ein Lieferservice angeboten. Dieser ist aber nur für besondere Anlässe angedacht, da er erst ab einem Einkauf ab 70€ angeboten wird. So fällt dieses Angebot für viele Alleinlebende weg, da sie selten einen so großen Einkauf tätigen.
+Darüber hinaus werden viele Arbeitsstätten täglich mit fertigem Essen beliefert. Wie für die Niederlande üblich, wird dies per Fahrradkurier ausgeliefert. Dies ist gerade in Amsterdam sehr vorteilhaft, da dort fast alles mit dem Fahrrad erledigt werden kann. Befragte aus Darmstadt und Umgebung haben mit den Angeboten von Lieferservices gemischte Erfahrungen. Bei den deutschen E-Food Angeboten existiert wie in den Niederlanden auch ein hoher Mindestbestellwert. Dieser liegt bei 40 Euro und ist abschreckend für die meisten Kunden. Dies ist auch bei den Nutzerbefragungen herausgekommen.
+</p>
+</div>
+  <h2 class="Kapitelüberschrift Tine">Das ist Tine.</h2>
+  <div class="tineText"
+  <p>Tine ist in Nordhessen aufgewachsen und möchte gern frische Lebensmittel in ihr Leben integrieren, da sie sich von Grund auf gesund ernährt. Sie ist daran interessiert eine ausgewogene Work-Life-Balance zu haben.
+    Ihr Mann und sie sind Foodies und kochen leidenschaftlich gerne. Sie verfolgen die neusten Trends für die Küche. Beide sind berufstätig und haben sehr wenig Zeit einzukaufen. Sie sind beide äußerst technikaffin und täglich im Internet. Tine legt großen Wert auf die ganzjährige Verfügbarkeit ihr Lieblingsprodukte Paprika und Zucchini.
+     An einem typischen Wochentag ist Tine von morgens gegen 07:30 Uhr bis abends gegen 18 Uhr arbeiten. In der Mittagspause hat sie am liebsten etwas selbstgemachtes dabei, was sie sich dann in der Firmenküche aufwärmt und in Gesellschaft ihrer liebsten Arbeitskollegen genießt.
+     Leider lässt ihr langer Tag jedoch nicht immer Zeit dafür übrig, Lebensmittel einzukaufen, die noch dazu frisch sind. Denn nach der Arbeit erwartet Tine nicht immer schon der Feierabend sondern oft auch weitere Termine und Verpflichtungen, wie Arztbesuche, Haushalt und familiäre Angelegenheiten. Tine vermisst einen Service, welcher ihr dabei hilft beim Einkaufen frischer Lebensmittel mehr auf Regionalität zu achten, ihr Zeit spart und der abwechslungsreich ist.
+  </p>
+</div>
+<h2 class="Kapitelüberschrift Vertrauen">Vertrauen</h2>
+<div class="VertrauenText"
+<p>Der direkte Kontakt vom Verkäufer zum Kunden, das ist es, was Menschen schätzen, wenn es um regionale Lebensmittel geht. Bei der Begrüßung angefangen, wird der Kaufprozess von mehreren Ereignissen begleitet. Diese führen dazu, dass der Kunde einen Bezug zum Produkt und zum Erzeuger entwickelt. Hierzu gehören aber auch die Ware anfassen, daran riechen und das Produkt mit allen Sinnen erleben. Das alles schafft die nötige Vertrauensbasis und ist wesentlicher Bestandteil beim Kauf von regionalen Lebensmitteln. Menschen, die bewusst regionale Lebensmittel kaufen, möchten auf diese Dinge nicht verzichten. Umfragen auf städtischen Wochenmärkten bestätigten dies. Die eben genannten Faktoren fallen im Online Lebensmittelhandel weg und sind so gut wie nicht zu ersetzen. Darum ist es notwendig, einen Online Markt für regionale Lebensmittel mit einer Anlaufstelle zu kombinieren, die dazu dient, dem Kunden einen Bezug zum Produkt sowie zum Erzeuger zu ermöglichen.
+</p>
+</div>
+<div class="FresaDesign_image">
+  <div class="overlay4">
+  </div>
+    <h2 class="Kapitelüberschrift Fresa_Design">Was macht Fresa?</h2>
+    <div class="Was_macht_Fresa">
+    <p>Der direkte Kontakt vom Verkäufer zum Kunden, das ist es, was Menschen schätzen, wenn es um regionale Lebensmittel geht. Bei der Begrüßung angefangen, wird der Kaufprozess von mehreren Ereignissen begleitet. Diese führen dazu, dass der Kunde einen Bezug zum Produkt und zum Erzeuger entwickelt. Hierzu gehören aber auch die Ware anfassen, daran riechen und das Produkt mit allen Sinnen erleben. Das alles schafft die nötige Vertrauensbasis und ist wesentlicher Bestandteil beim Kauf von regionalen Lebensmitteln. Menschen, die bewusst regionale Lebensmittel kaufen, möchten auf diese Dinge nicht verzichten. Umfragen auf städtischen Wochenmärkten bestätigten dies. Die eben genannten Faktoren fallen im Online Lebensmittelhandel weg und sind so gut wie nicht zu ersetzen. Darum ist es notwendig, einen Online Markt für regionale Lebensmittel mit einer Anlaufstelle zu kombinieren, die dazu dient, dem Kunden einen Bezug zum Produkt sowie zum Erzeuger zu ermöglichen.
+    </p>
+  </div>
+</div>
+<div <h2 class="Kapitelüberschrift FresaBestandteile">Fresa Bestandteile</h2>
+<div class="Fresa-Konzept_image">
+</div>
+<h3 class="Kapitelpunkte FresaKonzept">Fresa</h3>
+<div class="Fresa-Konzept">
+<p>Regionale Waren holt Fresa direkt beim Erzeuger ab und
+  liefert sie in das stadtnah gelegene Mikrodepot. Der Nutzer
+  kann die Produkte von Fresa entweder selbst abholen oder
+  sich in der Fresa Clipbox liefern lassen.
+</p>
+</div>
+</div>
 
 
-
+<!--
   <div class="Was_ist_Fresa">
     <h2 class="Kapitelüberschrift">Was ist Fresa?</h2>
     <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
       Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
     </p>
   </div>
-    <script type='text/javascript' src="jquery.js"></script>
-  </body>
-</body>
 
 <div class="Bestandteile">
   <h2 class="Kapitelüberschrift">Bestandteile von Fresa</h2>
@@ -145,8 +175,7 @@ Gefunden auf https://www.w3schools.com/howto/howto_js_sticky_header.asp
   <img src="./Pics/mal.png" alt="Bio" width= "300px" height="300px" margin-left="5px" margin-bottom= "20px">
 
   <script type='text/javascript' src="jquery.js"></script>
-</body>
-</body>
+
 
 <div class="Materialstudie_image">
   <div class="overlay4">
@@ -157,10 +186,6 @@ Gefunden auf https://www.w3schools.com/howto/howto_js_sticky_header.asp
     Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
   </p>
 </div>
-  <script type='text/javascript' src="jquery.js"></script>
-</body>
-</body>
-
 
 <div class="Preise">
   <h2 class="Kapitelüberschrift">Unsere Preise</h2>
@@ -168,7 +193,6 @@ Gefunden auf https://www.w3schools.com/howto/howto_js_sticky_header.asp
     Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
   </p>
 </div>
-  <script type='text/javascript' src="jquery.js"></script>
 
   <div class="Technik">
     <h2 class="Kapitelüberschrift">So funktionierts</h2>
@@ -176,8 +200,6 @@ Gefunden auf https://www.w3schools.com/howto/howto_js_sticky_header.asp
       Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
     </p>
   </div>
-    <script type='text/javascript' src="jquery.js"></script>
-
 
     <div class="technikVideo">
       <div class="video centered-content">
@@ -187,9 +209,9 @@ Gefunden auf https://www.w3schools.com/howto/howto_js_sticky_header.asp
             </video>
       </div>
     </div>
+-->
 
-
-    <div class="Kontakt">
+    <!--<div class="Kontakt">
       <h2 class="Kapitelüberschrift">Kontakt</h2>
       <div class="row">
   <div class="column">
@@ -211,7 +233,11 @@ Gefunden auf https://www.w3schools.com/howto/howto_js_sticky_header.asp
     <img src="./Pics/jan.png" alt="Jan" style="width:100%" "height:100%">
     <p>Hannah Ackermann
     hannah.ackermann@fresa.de</p>
+
+      <script type='text/javascript' src="jquery.js"></script>
   </div>
+
+  </body>
 
 
 
